--- a/dot_shellvars.tmpl
+++ b/dot_shellvars.tmpl
@@ -3,16 +3,6 @@ export EDITOR="vim"
 bindkey -v
 
 #########################################################################
-# Temporary aliases useful for demos, other current projects
-#########################################################################
-export MYTEMP=~/Documents/Temp
-export MYCODE=~/Documents/Code
-export MYSCRATCH=~/Documents/Temp/Scratch
-export MYDOWNLOADS=~/Downloads
-export MYDOCUMENTS=~/Documents
-export MYDEVAPPS=/Applications/Dev
-
-#########################################################################
 # Tool paths
 #########################################################################
 #export CLOJURE_HOME=/Applications/Dev/clojure
@@ -27,9 +17,13 @@ export MYDEVAPPS=/Applications/Dev
 #########################################################################
 export FONTCONFIG_PATH=/opt/X11/lib/X11/fontconfig
 export NVM_DIR=~/.nvm
-export VAULT_ADDR='https://secret.letgo.cloud:8200'
 
 #########################################################################
 # AWS Settings
 #########################################################################
-export AWS_DEFAULT_REGION=us-east-1
+export AWS_DEFAULT_REGION=eu-west-1
+
+#########################################################################
+# AWS Settings
+#########################################################################
+export GITLAB_TOKEN={{ (bitwardenFields "item" "Gitlab").personal_token.value }}
