--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -60,4 +60,8 @@ set -g renumber-windows on
 set-window-option -g monitor-activity on
 set-option -g visual-activity on
 # Activate powerline status bar
+{{- if eq .chezmoi.osRelease.ubuntuCodename "focal "}}
+source ${HOME}/.local/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
+{{ else }}
 source ${HOME}/.local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf
+{{- end }}
