--- a/dot_shellvars.tmpl
+++ b/dot_shellvars.tmpl
@@ -22,6 +22,7 @@ export NVM_DIR=~/.nvm
 # AWS Settings
 #########################################################################
 export AWS_DEFAULT_REGION=eu-west-1
+export AWS_PAGER=
 
 #########################################################################
 # AWS Settings
