Add MacOS configuration

--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -60,4 +60,4 @@ set -g renumber-windows on
 set-window-option -g monitor-activity on
 set-option -g visual-activity on
 # Activate powerline status bar
-source /usr/share/powerline/bindings/tmux/powerline.conf
+# source /usr/share/powerline/bindings/tmux/powerline.conf
