--- a/run_once_install_02_omz.sh.tmpl
+++ b/run_once_install_02_omz.sh.tmpl
@@ -1,9 +1,6 @@
 #!/bin/bash
 
-# check if running linux
-uname -a | grep Linux || exit 0
-
-
+{{- if eq .chezmoi.os "linux" -}}
 # Install NERD Fonts
 pushd /tmp
 	git clone --depth 1 https://github.com/ryanoasis/nerd-fonts.git
@@ -11,25 +8,15 @@ pushd /tmp
 popd
 
 sudo rm -rf /tmp/nerd-fonts
+{{ end -}}
 
 sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
 
+{{- if eq .chezmoi.os "linux" -}}
 ZSH_CUSTOM=${ZSH_CUSTOM:-~/.oh-my-zsh/custom}
-SPACESHIP_PROMPT_CHECKOUT=$ZSH_CUSTOM/themes/spaceship-prompt
-SPACESHIP_PROMPT_REPO=https://github.com/denysdovhan/spaceship-prompt.git
-
-echo Installing ZSH spaceship prompt...
-if cd "$SPACESHIP_PROMPT_CHECKOUT"; then
-    git pull
-else 
-    git clone $SPACESHIP_PROMPT_REPO "$SPACESHIP_PROMPT_CHECKOUT"
-fi
-
-ln -fs "$SPACESHIP_PROMPT_CHECKOUT/spaceship.zsh-theme" \
-       "$ZSH_CUSTOM/themes/spaceship.zsh-theme"
-
 # Install zsh plugins
 git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
 git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
 
 sudo chsh -s $(command -v zsh) ${USER}
+{{ end -}}
