--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -7,38 +7,7 @@ export ZSH="${HOME}/.oh-my-zsh"
 # load a random theme each time oh-my-zsh is loaded, in which case,
 # to know which specific one was loaded, run: echo $RANDOM_THEME
 # See https://github.com/ohmyzsh/ohmyzsh/wiki/Themes
-ZSH_THEME="spaceship"
-
-#
-# Spaceship prompt
-#
-SPACESHIP_DIR_PREFIX="🦊 "
-SPACESHIP_JOBS_SYMBOL="🔧"
-SPACESHIP_PROMPT_ADD_NEWLINE=false
-SPACESHIP_PROMPT_DEFAULT_PREFIX=
-SPACESHIP_PROMPT_FIRST_PREFIX_SHOW=true
-SPACESHIP_VI_MODE_SHOW=false
-
-# AWS
-SPACESHIP_AWS_PREFIX=
-
-# Kubernetes
-SPACESHIP_KUBECTL_SHOW=true
-
-# GIT
-SPACESHIP_GIT_PREFIX=
-
-# Golang
-SPACESHIP_GOLANG_SHOW=true
-
-# Python
-SPACESHIP_VENV_SHOW=true
-
-# Set list of themes to pick from when loading at random
-# Setting this variable when ZSH_THEME=random will cause zsh to load
-# a theme from this variable instead of looking in $ZSH/themes/
-# If set to an empty array, this variable will have no effect.
-# ZSH_THEME_RANDOM_CANDIDATES=( "robbyrussell" "agnoster" )
+# ZSH_THEME="spaceship"
 
 # Uncomment the following line to use case-sensitive completion.
 CASE_SENSITIVE="true"
@@ -117,8 +86,11 @@ unsetopt correct
 # Enable awscli autocomplete
 autoload bashcompinit && bashcompinit
 autoload -Uz compinit && compinit
+{{ if eq .chezmoi.os "darwin" }}
+complete -C '/opt/homebrew/bin/aws_completer' aws
+{{ else if eq .chezmoi.os "linux" }}
 complete -C '/usr/local/bin/aws_completer' aws
-
+{{ end }}
 
 # Export GITHUB Personal Access Token
 # Improve with chezmoi
@@ -128,3 +100,12 @@ source $HOME/.profile
 
 # Load fzf ctrl-r key binding
 source /usr/share/doc/fzf/examples/key-bindings.zsh
+
+eval "$(starship init zsh)"
+
+export VOLTA_HOME="$HOME/.volta"
+export PATH="$VOLTA_HOME/bin:$PATH"
+
+autoload -U +X bashcompinit && bashcompinit
+
+# command -v flux >/dev/null && . <(flux completion zsh)
