--- a/run_onchange_install_spacevim.sh.tmpl
+++ b/run_onchange_install_spacevim.sh.tmpl
@@ -1,5 +1,6 @@
 #!/bin/bash
 
+{{ if eq .chezmoi.os "linux" -}}
 NVIM_PATH=/usr/bin/nvim
 
 # Make neovim default editor
@@ -9,6 +10,7 @@ sudo update-alternatives --install /usr/bin/vi vi "${NVIM_PATH}" 110
 sudo update-alternatives --install /usr/bin/view view "${NVIM_PATH}" 110
 sudo update-alternatives --install /usr/bin/vim vim "${NVIM_PATH}" 110
 sudo update-alternatives --install /usr/bin/vimdiff vimdiff "${NVIM_PATH}" 110
+{{ end -}}
 
 # install spacevim
 curl -sLf https://spacevim.org/install.sh | bash
