--- a/run_once_install_02_omz.sh.tmpl
+++ b/run_once_install_02_omz.sh.tmpl
@@ -8,7 +8,7 @@ pushd /tmp
 popd
 
 sudo rm -rf /tmp/nerd-fonts
-{{ end -}}
+{{ end }}
 
 sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
 
