Fix package name typo

--- a/run_onchange_mac_install_01_packages.sh.tmpl
+++ b/run_onchange_mac_install_01_packages.sh.tmpl
@@ -9,7 +9,7 @@ brew "go"
 brew "python3"
 brew "volta"
 brew "ripgrep"
-brew "startship"
+brew "starship"
 brew "neovim"
 brew "zsh-autosuggestions"
 brew "zsh-completions"
