--- a/run_onchange_mac_install_01_packages.sh.tmpl
+++ b/run_onchange_mac_install_01_packages.sh.tmpl
@@ -15,6 +15,8 @@ brew "zsh-autosuggestions"
 brew "zsh-completions"
 brew "zsh-syntax-highlighting"
 brew "fzf"
+brew "autojump"
+brew "virtualenvwrapper"
 cask "font-fira-code-nerd-font"
 cask "visual-studio-code"
 cask "telegram"
