--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -17,6 +17,7 @@ brew "zsh-syntax-highlighting"
 brew "fzf"
 brew "autojump"
 brew "virtualenvwrapper"
+brew "tmux"
 cask "font-fira-code-nerd-font"
 cask "visual-studio-code"
 cask "telegram"
