--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -60,8 +60,8 @@ set -g renumber-windows on
 set-window-option -g monitor-activity on
 set-option -g visual-activity on
 # Activate powerline status bar
-{{ if .chezmoi.os eq "linux" }}
+{{ if eq .chezmoi.os "linux" }}
 source /usr/share/powerline/bindings/tmux/powerline.conf
-{{ else if .chezmoi.os eq "darwin" }}
+{{ else eq if .chezmoi.os "darwin" }}
 source /opt/homebrew/lib/python3.11/site-package/powerline/bindings/tmux/powerline.conf
 {{ end }}
