--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -62,6 +62,6 @@ set-option -g visual-activity on
 # Activate powerline status bar
 {{ if eq .chezmoi.os "linux" }}
 source /usr/share/powerline/bindings/tmux/powerline.conf
-{{ else eq if .chezmoi.os "darwin" }}
+{{ else if eq .chezmoi.os "darwin" }}
 source /opt/homebrew/lib/python3.11/site-package/powerline/bindings/tmux/powerline.conf
 {{ end }}
