--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -18,10 +18,12 @@ brew "fzf"
 brew "autojump"
 brew "virtualenvwrapper"
 brew "tmux"
+brew "podman"
 cask "font-fira-code-nerd-font"
 cask "visual-studio-code"
 cask "telegram"
 cask "steam"
 cask "rectangle"
+cask "podman-desktop"
 EOF
 {{ end -}}
