Add awscli to packages

--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -19,6 +19,7 @@ brew "autojump"
 brew "virtualenvwrapper"
 brew "tmux"
 brew "podman"
+brew "awscli"
 cask "font-fira-code-nerd-font"
 cask "visual-studio-code"
 cask "telegram"
