Add reattach namespace package

--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -20,6 +20,7 @@ brew "virtualenvwrapper"
 brew "tmux"
 brew "podman"
 brew "awscli"
+brew "reattach-to-user-namespace"
 cask "font-fira-code-nerd-font"
 cask "visual-studio-code"
 cask "telegram"
