--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -5,6 +5,7 @@ brew tap homebrew/cask-fonts
 
 brew bundle --no-lock --file=/dev/stdin <<EOF
 brew "git"
+brew "tig"
 brew "go"
 brew "python3"
 brew "volta"
