--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -22,6 +22,7 @@ brew "tmux"
 brew "podman"
 brew "awscli"
 brew "reattach-to-user-namespace"
+brew "tfenv"
 cask "font-fira-code-nerd-font"
 cask "visual-studio-code"
 cask "telegram"
