--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -3,6 +3,7 @@
 
 brew tap homebrew/cask-fonts
 brew tap hashicorp/tap
+brew tap go-task/tap
 
 brew bundle --no-lock --file=/dev/stdin <<EOF
 brew "git"
@@ -25,6 +26,7 @@ brew "awscli"
 brew "reattach-to-user-namespace"
 brew "tfenv"
 brew "hashicorp/tap/packer"
+brew "go-task/tap/go-task"
 cask "font-fira-code-nerd-font"
 cask "visual-studio-code"
 cask "telegram"
