Add VS Code extensions

--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -34,5 +34,10 @@ cask "steam"
 cask "rectangle"
 cask "podman-desktop"
 cask "warp"
+cask "slack"
+cask "docker"
 EOF
+
+# Install powerline status bar
+pip3 install powerline-status
 {{ end -}}
