--- a/dot_shell/vars.tmpl
+++ b/dot_shell/vars.tmpl
@@ -1,30 +1,50 @@
 # Set vim as default editor (vi is the default otherwise)
-export EDITOR="vim"
+export EDITOR="nvim"
 bindkey -v
-
-#########################################################################
-# Tool paths
-#########################################################################
-#export CLOJURE_HOME=/Applications/Dev/clojure
-#export EC2_HOME=/Applications/Dev/ec2-api-tools-1.3-46266
-#export JAVA_HOME=/Library/Java/Home
-#export JAVA_HOME=/System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home
-#export GOPATH=/usr/local/bin
-#export GROOVY_HOME=/usr/local/opt/groovy/libexec
 
 #########################################################################
 # Tool settings
 #########################################################################
+{{ if .isLinux }}
 export FONTCONFIG_PATH=/opt/X11/lib/X11/fontconfig
-export NVM_DIR=~/.nvm
+{{ end }}
 
 #########################################################################
 # AWS Settings
 #########################################################################
 export AWS_DEFAULT_REGION=eu-west-1
 export AWS_PAGER=
+{{ if .isJT }}
+export AWS_PROFILE=saml-jobandtalent
+{{ end }}
+
+{{ if .isPersonal }}
+export GITHUB_TOKEN={{ (bitwardenFields "item" "LINUXVEN_GH_TOKEN").personal_token.value }}
+{{ end }}
+
+{{ if .isWork }}
+export GITHUB_TOKEN={{ (bitwardenFields "item" "JT_SECRETS").gh_token.value }}
+export VAULT_GITHUB_API_TOKEN=${GITHUB_TOKEN}
+export HOMEBREW_GITHUB_API_TOKEN=${GITHUB_TOKEN}
+export TF_VAR_github_api_token=${GITHUB_TOKEN}
+
+export SLACK_OAUTH_TOKEN={{ (bitwardenFields "item" "JT_SECRETS").slack_token.value }}
 
 #########################################################################
-# AWS Settings
+# Ansible workaround
 #########################################################################
-export GITLAB_TOKEN={{ (bitwardenFields "item" "Gitlab").personal_token.value }}
+export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
+
+export BUNDLE_GEM__FURY__IO={{ (bitwardenFields "item" "JT_SECRETS").gem_fury_io.value }}
+export BUNDLE_GEMS__CONTRIBSYS__COM={{ (bitwardenFields "item" "JT_SECRETS").contribsys_com.value }}
+export DEVKIT_SECRETS_PASSWORD={{ (bitwardenFields "item" "JT_SECRETS").devkit_password.value }}
+
+export AIVEN_TOKEN={{ (bitwardenFields "item" "JT_SECRETS").aiven_token.value }}
+export CLOUDFLARE_API_TOKEN={{ (bitwardenFields "item" "JT_SECRETS").cloudflare_token.value }}
+
+#########################################################################
+# Pagerduty Token
+#########################################################################
+PAGERDUTY_USER_TOKEN={{ (bitwardenFields "item" "JT_SECRETS").pagerduty_token.value }}
+
+{{ end }}
