--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -21,21 +21,22 @@ brew "fzf"
 brew "autojump"
 brew "virtualenvwrapper"
 brew "tmux"
-brew "podman"
+brew "orbstack"
 brew "awscli"
 brew "reattach-to-user-namespace"
 brew "tfenv"
 brew "hashicorp/tap/packer"
 brew "go-task/tap/go-task"
+brew "jq"
 cask "font-fira-code-nerd-font"
-cask "visual-studio-code"
+cask "zed"
 cask "telegram"
 cask "steam"
 cask "rectangle"
 cask "podman-desktop"
-cask "warp"
+cask "ghostty"
 cask "slack"
-cask "docker"
+cask "alt-tab"
 EOF
 
 # Install powerline status bar
