Remove insteadof configuration

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -14,11 +14,11 @@
   user = overdrive3000
   {{ end }}
 
-{{ if .isPersonal }}
-# Authenticate using token when using https URL format
-[url "{{ (bitwardenFields "item" "LINUXVEN_GH_TOKEN").token_url.value }}"]
-  insteadOf = https://github.com
-{{ end }}
+# {{ if .isPersonal }}
+# # Authenticate using token when using https URL format
+# [url "{{ (bitwardenFields "item" "LINUXVEN_GH_TOKEN").token_url.value }}"]
+#   insteadOf = https://github.com
+# {{ end }}
 
 [color]
 # ui = true is a superset of all the more specific color options
