--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -24,6 +24,6 @@ set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'erikw/tmux-powerline'
 
 if "test ! -d ~/.tmux/plugins/tpm" \
-  "rim 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+  "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 run '~/.tmux/plugins/tpm/tpm'
