Set zsh as default shell for tmux

--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -2,6 +2,9 @@
 # Key combination prefix is <C-a>, not <C-b>
 set -g prefix C-a
 
+### Set default shell to zsh
+set-option -g default-shell "/bin/zsh"
+
 ### Appareance
 # Automatically renumber window numbers on closing a pane (tmux >= 1.7)
 set -g renumber-windows on
