Set zsh as default shell for tmux

--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -4,6 +4,7 @@ set -g prefix C-a
 
 ### Set default shell to zsh
 set-option -g default-shell "/bin/zsh"
+set-option -g default-command "/bin/zsh"
 
 ### Appareance
 # Automatically renumber window numbers on closing a pane (tmux >= 1.7)
