--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -26,6 +26,8 @@ brew "awscli"
 brew "reattach-to-user-namespace"
 brew "tfenv"
 brew "hashicorp/tap/packer"
+brew "hashicorp/tap/terraform",
+brew "hashicorp/tap/terraform-ls",
 brew "go-task/tap/go-task"
 brew "jq"
 cask "font-fira-code-nerd-font"
