Update brew bundle syntax

--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -5,7 +5,7 @@ brew tap homebrew/cask-fonts
 brew tap hashicorp/tap
 brew tap go-task/tap
 
-brew bundle --no-lock --file=/dev/stdin <<EOF
+brew bundle upgrade --file=/dev/stdin <<EOF
 brew "git"
 brew "tig"
 brew "go"
