--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -1,7 +1,6 @@
 {{- if eq .chezmoi.os "darwin" -}}
 #!/bin/bash
 
-brew tap homebrew/cask-fonts
 brew tap hashicorp/tap
 brew tap go-task/tap
 
@@ -26,8 +25,8 @@ brew "awscli"
 brew "reattach-to-user-namespace"
 brew "tfenv"
 brew "hashicorp/tap/packer"
-brew "hashicorp/tap/terraform",
-brew "hashicorp/tap/terraform-ls",
+brew "hashicorp/tap/terraform"
+brew "hashicorp/tap/terraform-ls"
 brew "go-task/tap/go-task"
 brew "jq"
 cask "font-fira-code-nerd-font"
