Update brew bundle syntax

--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -20,26 +20,21 @@ brew "fzf"
 brew "autojump"
 brew "virtualenvwrapper"
 brew "tmux"
-brew "orbstack"
 brew "awscli"
 brew "reattach-to-user-namespace"
 brew "tfenv"
 brew "hashicorp/tap/packer"
-brew "hashicorp/tap/terraform"
 brew "hashicorp/tap/terraform-ls"
 brew "go-task/tap/go-task"
 brew "jq"
 cask "font-fira-code-nerd-font"
+cask "orbstack"
 cask "zed"
 cask "telegram"
 cask "steam"
 cask "rectangle"
-cask "podman-desktop"
 cask "ghostty"
 cask "slack"
 cask "alt-tab"
 EOF
-
-# Install powerline status bar
-pip3 install powerline-status
 {{ end -}}
