add helm-ls package

--- a/run_onchange_install_01_mac_packages.sh.tmpl
+++ b/run_onchange_install_01_mac_packages.sh.tmpl
@@ -27,6 +27,7 @@ brew "hashicorp/tap/packer"
 brew "hashicorp/tap/terraform-ls"
 brew "go-task/tap/go-task"
 brew "jq"
+brew "helm-ls"
 cask "font-fira-code-nerd-font"
 cask "orbstack"
 cask "zed"
