--- a/dot_shell/paths.tmpl
+++ b/dot_shell/paths.tmpl
@@ -12,6 +12,7 @@ export PATH=$HOME/.arkade/bin:$PATH
 
 # Go binaries
 export PATH=/usr/local/go/bin:$PATH
+export PATH=$HOME/go/bin:$PATH
 
 # krew kubectl plugin
 export PATH=$HOME/.krew/bin:$PATH
